tests/comp/sem/invalid/call_undefined.mj
class A {

	public int test() {
		/*** foo(); ***/
		return 0;
	}

	public static void main(String[] args) {
	}

}
